# stand-application-by-rust

./: .gitignore  README.md  docker-compose.yml
app/: Dockerfile
app/stand_application_rust/: Cargo.toml
app/stand_application_rust/src/: lib.rs  main.rs
app/stand_application_rust/src/controllers/: mod.rs
app/stand_application_rust/src/controllers/stand_user/: user.rs
