[package]
name = "stand_application_rust"
version = "0.1.0"
edition = "2021"
authors = ["yuki-matsumoto <yuki-matsumoto@altplus.co.jp>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-rt = "2.7.0"
serde_derive = "1.0.137"
serde = "1.0.137"
serde_json = "1.0.81"